組織A1/組織A1/metadata/objects/deploymetaOne__c.object
<CustomObject>
    <fields>
        <fullName>deploymetaOneA__c</fullName>
        <label>deploymetaOneA</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deploymetaOneB__c</fullName>
        <label>deploymetaOneB</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deploymetaOneC__c</fullName>
        <label>deploymetaOneC</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deploymetaOneD__c</fullName>
        <label>deploymetaOneD</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deploymetaOneE__c</fullName>
        <label>deploymetaOneE</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deploymetaOneF__c</fullName>
        <label>deploymetaOneF</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deploymetaOneG__c</fullName>
        <label>deploymetaOneG</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deploymetaOneH__c</fullName>
        <label>deploymetaOneH</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deploymetaOneI__c</fullName>
        <label>deploymetaOneI</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deploymetaOneJ__c</fullName>
        <label>deploymetaOneJ</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deploymetaOneK__c</fullName>
        <label>deploymetaOneK</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deploymetaOneL__c</fullName>
        <label>deploymetaOneL</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>deploymetaOne</label>
    <nameField>
        <label>deploymetaOne名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>